--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <p>© 2023 PATARA - Resort & Spa Hotel. All right reserved.</p>
+                        <p>© 2024 Sandy's Tower -Hotel & Convention. All right reserved.</p>
                     </div>
                     <div class="col-md-8">
                         <p class="right"><a href="#">Terms &amp; Conditions</a></p>
