--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
                 </div>
                 <!-- Logo -->
                 <div class="col-6 col-md-10 text-center patara-logo-wrap">
-                    <a href="index.html" class="patara-logo"><img src="img/logo-light.png" alt=""></a>
+                    <a href="index.html" class="patara-logo"><img src="img/SANDYS TOWER-01.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -285,7 +285,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <p>© 2023 PATARA - Resort & Spa Hotel. All right reserved.</p>
+                        <p>© 2024 Sandy's Tower -Hotel & Convention. All right reserved.</p>
                     </div>
                     <div class="col-md-8">
                         <p class="right"><a href="#">Terms &amp; Conditions</a></p>
