--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
                 </div>
                 <!-- Logo -->
                 <div class="col-6 col-md-10 text-center patara-logo-wrap">
-                    <a href="index.html" class="patara-logo"><img src="img/logo-light.png" alt=""></a>
+                    <a href="index.html" class="patara-logo"><img src="img/SANDYS TOWER-01.png" alt=""></a>
                 </div>
             </div>
         </div>
