--- a/index.html
+++ b/index.html
@@ -333,17 +333,8 @@
     </div>
 </section>
 <!-- service -->
-<section class="rooms1 section-padding">
+<section class="services3 section-padding" data-scroll-index="1">
     <div class="container">
-        <div class="row mb-30">
-            <div class="col-md-3">
-                <div class="sub-title border-bot-light">Discover</div>
-            </div>
-            <div class="col-md-9">
-                <div class="section-title">Services </div>
-                <p>Reserve the room you prefer (depending on availability). Choose from a variety of sizes and styles. Lorem ipsum viverra tristique justo duis vitae diaminte neque nivamus aestan artines in the nedana mis erodino fermen.</p>
-            </div>
-        </div>
         <div class="services3-content">
             <div class="row m-0">
                 <div class="col-md-4 p-0">
@@ -362,10 +353,10 @@
                 </div>
                 <div class="col-md-4 p-0">
                     <div class="services3-text second">
-                        <h5>Meetings & Events</h5>
+                        <h5>Spa & Wellness</h5>
                         <p>Spa ut nislan quam nestibulum ac quam the odio elementum the aucan rana.</p>
                         <p class="mb-30">Spa & Wellness inilla duiman at elit finibus vivera nectar a lacus themo the nesudea seneoice misuscipit non sagie the fermen duru theite dianne onen artine.</p>
-                        <div class="butn-dark"> <a href="meetingsandevents.html"><span>Learn More</span></a> </div>
+                        <div class="butn-dark"> <a href="spa-wellness.html"><span>Learn More</span></a> </div>
                     </div>
                 </div>
                 <div class="col-md-4 p-0">
@@ -376,7 +367,7 @@
                         <h5>Fitness Club</h5>
                         <p>Fitness ut nislan quam nestibulum ac quam the odio elementum the aucan rana.</p>
                         <p class="mb-30">Fitness club inilla duiman at elit finibus vivera nectar a lacus themo the nesudea seneoice misuscipit non sagie the fermen duru theite dianne onen artine.</p>
-                        <div class="butn-dark"> <a href="amenities.html"><span>Learn More</span></a> </div>
+                        <div class="butn-dark"> <a href="spa-wellness.html"><span>Learn More</span></a> </div>
                     </div>
                 </div>
             </div>
