--- a/index.html
+++ b/index.html
@@ -29,59 +29,22 @@
         <div class="patara-wrap-inner">
             <nav class="patara-menu">
                 <ul>
-                    <li class='patara-menu-sub'><a class="active" href='#'>Home <i class="ti-angle-down"></i></a>
-                        <ul>
-                            <li><a href="index.html">Slider 1</a></li>
-                            <li><a href="index2.html">Slider 2</a></li>
-                            <li><a href="index3.html">Parallax Image 1</a></li>
-                            <li><a href="index4.html">Parallax Image 2</a></li>
-                            <li class="active"><a href="index5.html">Slideshow 1</a></li>
-                            <li><a href="index6.html">Slideshow 2</a></li>
-                            <li><a href="index7.html">Video 1</a></li>
-                            <li><a href="index8.html">Video 2</a></li>
-                        </ul> 
+                    <li  class="active"><a href='index.html'>Home </a>
+
                     </li>
                     <li><a href="about.html">About</a></li>
-                    <li class='patara-menu-sub'><a href='#'>Rooms &amp; Suites <i class="ti-angle-down"></i></a>
-                        <ul>
-                            <li><a href='rooms.html'>Rooms 1</a></li>
-                            <li><a href='rooms2.html'>Rooms 2</a></li>
-                            <li><a href='rooms3.html'>Rooms 3</a></li>
-                            <li><a href='rooms4.html'>Rooms 4</a></li>
-                            <li><a href='rooms5.html'>Rooms 5</a></li>
-                            <li><a href='rooms6.html'>Rooms 6</a></li>
-                            <li><a href='rooms7.html'>Rooms 7</a></li>
-                            <li><a href='room-details.html'>Room Details</a></li>
-                            <li><a href='room-details2.html'>Room Details 2</a></li>
-                        </ul>
+                    <li><a href='rooms4.html'>Rooms &amp; Suites </a>
+
                     </li>
-                    <li class='patara-menu-sub'><a href='#'>Services <i class="ti-angle-down"></i></a>
-                        <ul>
-                            <li><a href='services.html'>Services 1</a></li>
-                            <li><a href='services2.html'>Services 2</a></li>
-                            <li><a href='services3.html'>Services 3</a></li>
-                        </ul>
+                    <li><a href="meetingsandevents.html">Meetings & Events </a>
+
                     </li>
                     <li><a href="restaurant.html">Restaurant</a></li>
-                    <li class="patara-menu-sub"><a href='#'>Pages <i class="ti-angle-down"></i></a>
-                        <ul>
-                            <li><a href="amenities.html">Amenities</a></li>
-                            <li><a href="spa-wellness.html">Spa & Wellness</a></li>
-                            <li><a href="gallery-image.html">Image Gallery</a></li>
-                            <li><a href="gallery-video.html">Video Gallery</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="faq.html">F.A.Qs</a></li>
-                            <li><a href="404.html">404 Page</a></li>
-                            <li><a href="coming-soon.html">Coming Soon</a></li>
-                        </ul>
+                    <li><a href='amenities.html'>Amenities </a>
+
                     </li>
-                    <li class='patara-menu-sub'><a href='#'>Blog <i class="ti-angle-down"></i></a>
-                        <ul>
-                            <li><a href='blog.html'>Blog 1</a></li>
-                            <li><a href='blog2.html'>Blog 2</a></li>
-                            <li><a href='post.html'>Post Post</a></li>
-                        </ul>
+                    <li><a href='#'>Blog </a>
+
                     </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
