--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                     <div class="sub-title border-bot-light">Welcome to</div>
                 </div>
                 <div class="col-md-9">
-                    <div class="section-title">Patara Luxury Hotel</div>
+                    <div class="section-title">Sandy's Tower</div>
                     <div class="row">
                         <div class="col-md-6">
                             <p>Welcome to the best five-star deluxe hotel in New York. The in hotel elementum sesue the aucan vestibulum aliquam ustona sapien rutrum volutpat onec in quis the veliten.</p>
