--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Patara - Resort & Spa Hotel</title>
+    <title>Sandy's Tower - Hotel & Convention</title>
     <link rel="shortcut icon" href="img/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Outfit:wght@300;400&display=swap">
     <link rel="stylesheet" href="css/plugins.css" />
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center"> <span><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i></span>
-                    <div class="section-subtitle"><span>Patara Resort & Spa Hotel</span></div>
+                    <div class="section-subtitle"><span>Sandy'S Tower</span></div>
                     <div class="section-title"><span>Hotel Promotional Video</span></div>
                 </div>
             </div>
