--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Patara - Resort & Spa Hotel</title>
+    <title>Sandy's Tower - Hotel & Convention</title>
     <link rel="shortcut icon" href="img/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Outfit:wght@300;400&display=swap">
     <link rel="stylesheet" href="css/plugins.css" />
@@ -89,13 +89,14 @@
                                 <i class="star-rating"></i>
                                 <i class="star-rating"></i>
                             </span>
-                            <h4>Welcome to Patara</h4>
+                            <h4>Welcome to Sandy's Tower</h4>
                             <h1>The Best Five-Star Luxury Hotel</h1>
-                            <div class="butn-light mt-30 mb-30"> <a href="#"><span>Explore More</span></a> </div>
+                            
                         </div>
                     </div>
                 </div>
             </div>
+         
         </div>
     </aside>
     <!-- Booking Search -->
