--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2 text-center"> <span><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i></span>
-                <div class="section-subtitle"><span>Patara Resort & Spa Hotel</span></div>
+                <div class="section-subtitle"><span>Sandy's Tower</span></div>
                 <div class="section-title"><span>Hotel Promotional Video</span></div>
             </div>
         </div>
