--- a/luxury.html
+++ b/luxury.html
@@ -85,9 +85,9 @@
                     <div class="wrap">
                         <figure>
                             <div class="owl-carousel owl-theme">
-                                <div class="img"> <img src="img/rooms/19.jpg" alt=""> </div>
-                                <div class="img"> <img src="img/rooms/20.jpg" alt=""> </div>
-                                <div class="img"> <img src="img/rooms/21.jpg" alt=""> </div>
+                                <div class="img"> <img src="img/Luxury-King-Bed-3.jpg" alt=""> </div>
+                                <div class="img"> <img src="img/Luxury-King-Bed-4.jpg" alt=""> </div>
+                                
                             </div>
                         </figure>
                         <div class="caption">
@@ -216,24 +216,24 @@
                     <div class="col-md-4 offset-md-1">
                         <div class="item">
                             <h3>Get in touch</h3>
-                            <p>1616 Broadway NY, New York 10001
-                                <br>United States of America.
+                            <p>Plot No. P-1 & P-1/A, Jaydev Vihar,<br> Bhubaneswar, Odisha 75101
                             </p>
-                            <p class="phone">+1 203 123 0606</p>
-                            <p class="mail">info@hotel.com</p>
+                            <p class="phone"><a href="tel:+91 6746665555">+91 6746665555</a></p>
+                        <p class="phone"><a href="tel:+91 9040255555">+91 90402555551</a></p>
+                            <p class="mail"><a href="info@sandystower.com">info@sandystower.com</a></p>
                             <div class="social mt-2"> <a href="index.html"><i class="ti-twitter"></i></a> <a href="index.html"><i class="ti-instagram"></i></a> <a href="index.html"><i class="ti-linkedin"></i></a> </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="item">
-                            <h3>Rooms & Suites</h3>
+                            <h3>Quick Links</h3>
                             <ul class="footer-explore-list list-unstyled">
-                                <li><a href="rooms.html">Junior Room</a></li>
-                                <li><a href="rooms.html">Family Room</a></li>
-                                <li><a href="rooms.html">Double Room</a></li>
-                                <li><a href="rooms.html">Deluxe Room</a></li>
-                                <li><a href="rooms.html">Superior Room</a></li>
-                                <li><a href="rooms.html">King Suite</a></li>
+                                 <li><a href="rooms4.html">Rooms & Suites</a></li>
+                                <li><a href="restaurant.html">Restaurants</a></li>
+                                <li><a href="meetingsandevents.html">Meetings And Events</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="privacy.html">Privacy Policy</a></li>
+                                <li><a href="termsandCondition.html">Terms and Conditions</a></li>
                             </ul>
                         </div>
                     </div>
