--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 </div>
             </div>
             <div class="rooms1-single">
-                <div class="rooms1-img"> <img src="img/Luxury King Bed-3.jpg" alt=""> </div>
+                <div class="rooms1-img"> <img src="img/Luxury-King-Bed-3.jpg" alt=""> </div>
                 <div class="rooms1-content">
                     <div class="row">
                         <div class="col-md-6">
@@ -629,13 +629,13 @@
         $(document).ready(function() {
             $('#kenburnsSliderContainer').vegas({
                 slides: [{
-                    src: "img/frontview.jpg"
+                    src: "img/FrontView.jpg"
                 }, {
                     src: "img/arieal.jpg"
                 }, {
-                    src: "img/Royal Suite.jpg"
+                    src: "img/Royal-Suite.jpg"
                 }, {
-                    src: "img/lobby.jpg"
+                    src: "img/Lobby.jpg"
                 }],
                 overlay: true,
                 transition: 'fade2',
