--- a/HI5.html
+++ b/HI5.html
@@ -80,8 +80,8 @@
     <header class="header slider">
         <div class="owl-carousel owl-theme">
             <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/restaurant/2.jpg"></div>
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/restaurant/1.jpg"></div>
+            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/hi-5.jpg"></div>
+            
         </div>
         <!-- button scroll -->
         <a href="#" data-scroll-nav="1" class="mouse smoothscroll"> <span class="mouse-icon">
@@ -97,37 +97,9 @@
                 </div>
                 <div class="col-md-9">
                     <div class="section-title">HI-5 Lounge</div>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus praesent volutpat nibh ac sodales sodales nunc tincidunt eras sene nisi faucibus, eget sagittis libero imperdiet tunc risus magna, imperdiet gravida ultricies in, aliquam a tortor mestibulum tristique posuere magna, quis elementum neque luctus non.</p>
-                    <p>Aenean sed arcu efficitur, commodo justo ut, accumsan massa vivamus ac risus in felis imperdiet mollis id sit amet odio miss vestibulum dignissim finibus diam a commodo nulla quis miss duru rana egestas ipsum.</p>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h6>Hours</h6>
-                            <ul class="list-unstyled page-list mb-30">
-                                <li>
-                                    <div class="page-list-icon"> <span class="ti-time"></span> </div>
-                                    <div class="page-list-text">
-                                        <p>Breakfast: 7.00 am – 11.00 am (daily)</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="page-list-icon"> <span class="ti-time"></span> </div>
-                                    <div class="page-list-text">
-                                        <p>Lunch: 12.00 noon – 2.00 pm (daily)</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="page-list-icon"> <span class="ti-time"></span> </div>
-                                    <div class="page-list-text">
-                                        <p>Dinner: open from 6.30 pm, last order at 10.00 pm (daily)</p>
-                                    </div>
-                                </li>
-                            </ul>
-                            <h6>Dress Code</h6>
-                            <p>Smart casual (no shorts, hats, or sandals permitted)</p>
-                            <h6>Terrace</h6>
-                            <p>Open for drinks only</p>
-                        </div>
-                    </div>
+                    <p>Step into "Hi-5," a celebration lounge bar where every visit is a toast to special moments among friends. Located at the lobby level, this unique and stylish bar offers plush seating and an exclusive Smoker’s Room. Indulge in our exquisite cocktails or premium spirits, perfectly paired with your favorite munchies. </p>
+                    <p>"Hi-5," we set the mood with soothing lounge music, providing the perfect stress-busting ambiance for any occasion. Join us for an unforgettable experience where every sip and every beat celebrates life.</p>
+                   
                 </div>
             </div>
         </div>
