--- a/meetingsandevents.html
+++ b/meetingsandevents.html
@@ -79,7 +79,7 @@
     </div>
     <!-- Header Banner -->
     <div class="banner-header section-padding valign bg-img bg-fixed bg-position-bottom" data-overlay-dark="4"
-        data-background="img/spa/1.jpg">
+        data-background="img/meet.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center caption">
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col-md-4 mb-30">
                     <div class="rooms3">
-                        <div class="room-img"><img src="img/rooms/1.jpg" alt="" class="w-100"></div>
+                        <div class="room-img"><img src="img/utopia.jpg" alt="" class="w-100"></div>
                         <div class="room-header">
                             <h3 class="room-label">Utopia</h3>
                         </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-md-4 mb-30">
                     <div class="rooms3">
-                        <div class="room-img"><img src="img/rooms/2.jpg" alt="" class="w-100"></div>
+                        <div class="room-img"><img src="img/graph.jpg" alt="" class="w-100"></div>
                         <div class="room-header">
                             <h3 class="room-label">Graph</h3>
                         </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-md-4 mb-30">
                     <div class="rooms3">
-                        <div class="room-img"><img src="img/rooms/3.jpg" alt="" class="w-100"></div>
+                        <div class="room-img"><img src="img/hall-no-365 .jpg" alt="" class="w-100"></div>
                         <div class="room-header">
                             <h3 class="room-label">Premia</h3>
                         </div>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="col-md-4 mb-30">
                     <div class="rooms3">
-                        <div class="room-img"><img src="img/rooms/5.jpg" alt="" class="w-100"></div>
+                        <div class="room-img"><img src="img/south-lawn.jpg" alt="" class="w-100"></div>
                         <div class="room-header">
                             <h3 class="room-label">South Lawn</h3>
                         </div>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-md-4 mb-30">
                     <div class="rooms3">
-                        <div class="room-img"><img src="img/rooms/6.jpg" alt="" class="w-100"></div>
+                        <div class="room-img"><img src="img/north-lawn.jpg" alt="" class="w-100"></div>
                         <div class="room-header">
                             <h3 class="room-label">North lawn</h3>
                         </div>
