--- a/restaurant.html
+++ b/restaurant.html
@@ -80,8 +80,8 @@
     <header class="header slider">
         <div class="owl-carousel owl-theme">
             <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/restaurant/2.jpg"></div>
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/restaurant/1.jpg"></div>
+            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/Xenia.jpg"></div>
+            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/pool-deck-area.jpg"></div>
         </div>
         <!-- button scroll -->
         <a href="#" data-scroll-nav="1" class="mouse smoothscroll"> <span class="mouse-icon">
@@ -96,7 +96,7 @@
                 <div class="col-md-4">
                     <div class="item">
                         <div class="item-wrap">
-                            <div class="img"> <img src="img/news/1.jpg" alt=""> </div>
+                            <div class="img"> <img src="img/xenia (1).jpg" alt=""> </div>
                             <div class="con">
                                 <div class="title-box">
                                     <h3><a href="Xenia.html">Xenia-Multicusine Restaurant</a></h3>
@@ -109,7 +109,7 @@
                 <div class="col-md-4">
                     <div class="item">
                         <div class="item-wrap">
-                            <div class="img"> <img src="img/news/2.jpg" alt=""> </div>
+                            <div class="img"> <img src="img/hi.jpg" alt=""> </div>
                             <div class="con">
                                 <div class="title-box">
                                     <h3><a href="HI5.html">HI5- Lounge</a></h3>
@@ -122,7 +122,7 @@
                 <div class="col-md-4">
                     <div class="item">
                         <div class="item-wrap">
-                            <div class="img"> <img src="img/news/5.jpg" alt=""> </div>
+                            <div class="img"> <img src="img/Pool deck area (1).jpg" alt=""> </div>
                             <div class="con">
                                 <div class="title-box">
                                     <h3><a href="sandysdeck.html">Sandy's Deck</a></h3>
@@ -135,7 +135,7 @@
                 <div class="col-md-4">
                     <div class="item">
                         <div class="item-wrap">
-                            <div class="img"> <img src="img/news/5.jpg" alt=""> </div>
+                            <div class="img"> <img src="img/Ulong (1).jpg" alt=""> </div>
                             <div class="con">
                                 <div class="title-box">
                                     <h3><a href="Oolong.html">Oolongs-Cafe</a></h3>
