--- a/rooms4.html
+++ b/rooms4.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item">
-                        <div class="head"> <img src="img/rooms/2.jpg" alt="">
+                        <div class="head"> <img src="img/club royal (1).jpg" alt="">
                             <h3 class="title"><a href="Club-royal.html">Club Royal</a></h3>
                         </div>
                         <div class="con"> <span class="icon"><i class="flaticon-bed"></i></span>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item">
-                        <div class="head"> <img src="img/rooms/3.jpg" alt="">
+                        <div class="head"> <img src="img/club executive (1).jpg" alt="">
                             <h3 class="title"><a href="Club-Executive.html">Club-Executive</a></h3>
                         </div>
                         <div class="con"> <span class="icon"><i class="flaticon-bed"></i></span>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="item">
-                        <div class="head"> <img src="img/room1 (1).png" alt="">
+                        <div class="head"> <img src="img/royalban.png" alt="">
                             <h3 class="title"><a href="Royal-Suit.html">Royal Suit</a></h3>
                         </div>
                         <div class="con"> <span class="icon"><i class="flaticon-bed"></i></span>
