--- a/Club-royal.html
+++ b/Club-royal.html
@@ -78,72 +78,120 @@
     </div>
     
     <!-- Rooom Details -->
-    <div class="room-details2 section-padding valign bg-img bg-fixed" data-overlay-dark="7" data-background="img/slider/6.jpg">
+    <div class="room-details2 section-padding valign bg-img bg-fixed" data-overlay-dark="7" data-background="img/club-royal.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="wrap">
                         <figure>
                             <div class="owl-carousel owl-theme">
-                                <div class="img"> <img src="img/rooms/19.jpg" alt=""> </div>
-                                <div class="img"> <img src="img/rooms/20.jpg" alt=""> </div>
-                                <div class="img"> <img src="img/rooms/21.jpg" alt=""> </div>
+                                <div class="img"> <img src="img/club-royal.jpg" alt=""> </div>
+                                
                             </div>
                         </figure>
                         <div class="caption">
-                            <div class="title white mb-10">Club Royal</div> <span>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                                <i class="star-rating"></i>
-                            </span>
-                            <p>Spacious, bright guestrooms with tasteful furnishing, wooden floor and panoramic windows from the ceiling to the floor.</p>
+                            <div class="title white mb-10">Club Royal</div>
+
+                            <p>Spacious, bright guestrooms with tasteful furnishing, wooden floor and panoramic windows
+                                from the ceiling to the floor.</p>
                             <div class="row">
                                 <div class="col col-md-6">
                                     <ul class="list-unstyled list mb-4">
                                         <li>
-                                            <div class="icon"> <span class="flaticon-group"></span> </div>
+                                            <div class="icon"> <img class="icon1" src="img/work-station.png" alt=""> </div>
                                             <div class="text">
-                                                <p>1-2 Persons</p>
+                                                <p>Work station</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/LCD.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Multi-channel LCD TV</p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <span class="flaticon-phone"></span> </div>
+                                            <div class="text">
+                                                <p>Direct dial telephone</p>
+                                            </div>
+                                        </li>
+                                        <!-- <li>
+                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
+                                            <div class="text">
+                                                <p>Swimming Pool</p>
+                                            </div>
+                                        </li> -->
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/mini-bar.png" alt="">  </div>
+                                            <div class="text">
+                                                <p>Mini-bar</p>
+                                            </div>
+                                        </li>
+                                        <!-- <li>
+                                            <div class="icon"> <img class="icon1" src="img/travel-desk.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Travel desk</p>
+                                            </div>
+                                        </li> -->
+                                        <!-- <li>
+                                            <div class="icon"><img class="icon1" src="img/doctor-on-call.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Doctor on Call</p>
+                                            </div>
+                                        </li> -->
+                                    </ul>
+                                </div>
+                                <div class="col col-md-6">
+                                    <ul class="list-unstyled list mb-4">
+                                        <!-- <li>
+                                            <div class="icon"> <span class="flaticon-towel"></span> </div>
+                                            <div class="text">
+                                                <p>Laundry Service</p>
+                                            </div>
+                                        </li> -->
+                                        <li>
+                                            <div class="icon"> <span class="flaticon-clock-1"></span> </div>
+                                            <div class="text">
+                                                <p>24 hours hot/cold water
+                                                </p>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"> <span class="flaticon-coffee-cup"></span> </div>
+                                            <div class="text">
+                                                <p>Tea/coffer maker </p>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="icon"> <span class="flaticon-wifi"></span> </div>
                                             <div class="text">
-                                                <p>Free Wifi</p>
+                                                <p>Wi-Fi connectivity</p>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="icon"> <span class="flaticon-bed"></span> </div>
+                                            <div class="icon"> <img class="icon1" src="img/Imported-amenities.png" alt="">  </div>
                                             <div class="text">
-                                                <p>Twin Bed</p>
+                                                <p>Imported Toiletries</p>
                                             </div>
                                         </li>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/Electronic-safe.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Electronic safe </p>
+                                            </div>
+                                        </li>
+                                        <!-- <li>
+                                            <div class="icon"> <img class="icon1" src="img/business-centre.png" alt=""> </div>
+                                            <div class="text">
+                                                <p>Business Center</p>
+                                            </div>
+                                        </li> -->
                                     </ul>
                                 </div>
-                                <div class="col col-md-6">
-                                    <ul class="list-unstyled list mb-4">
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-breakfast"></span> </div>
-                                            <div class="text">
-                                                <p>Breakfast</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-clock-1"></span> </div>
-                                            <div class="text">
-                                                <p>200 sqft room</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
-                                            <div class="text">
-                                                <p>Swimming Pool</p>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
+                            </div>
+                            <div class="book">
+                                <div><a href="Club-Executive.html" class="butn-dark2"><span>Book</span></a></div>
+
                             </div>
                         </div>
                     </div>
