--- a/Oolong.html
+++ b/Oolong.html
@@ -80,8 +80,8 @@
     <header class="header slider">
         <div class="owl-carousel owl-theme">
             <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/restaurant/2.jpg"></div>
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/restaurant/1.jpg"></div>
+            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/Ulong.jpg"></div>
+          
         </div>
         <!-- button scroll -->
         <a href="#" data-scroll-nav="1" class="mouse smoothscroll"> <span class="mouse-icon">
@@ -93,41 +93,12 @@
         <div class="container">
             <div class="row mb-30">
                 <div class="col-md-3">
-                    <div class="sub-title border-bot-light">Oolong- Cafe</div>
+                    <div class="sub-title border-bot-light">Address of taste</div>
                 </div>
                 <div class="col-md-9">
-                    <div class="section-title">Patara Restaurant</div>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus praesent volutpat nibh ac sodales sodales nunc tincidunt eras sene nisi faucibus, eget sagittis libero imperdiet tunc risus magna, imperdiet gravida ultricies in, aliquam a tortor mestibulum tristique posuere magna, quis elementum neque luctus non.</p>
-                    <p>Aenean sed arcu efficitur, commodo justo ut, accumsan massa vivamus ac risus in felis imperdiet mollis id sit amet odio miss vestibulum dignissim finibus diam a commodo nulla quis miss duru rana egestas ipsum.</p>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h6>Hours</h6>
-                            <ul class="list-unstyled page-list mb-30">
-                                <li>
-                                    <div class="page-list-icon"> <span class="ti-time"></span> </div>
-                                    <div class="page-list-text">
-                                        <p>Breakfast: 7.00 am – 11.00 am (daily)</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="page-list-icon"> <span class="ti-time"></span> </div>
-                                    <div class="page-list-text">
-                                        <p>Lunch: 12.00 noon – 2.00 pm (daily)</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="page-list-icon"> <span class="ti-time"></span> </div>
-                                    <div class="page-list-text">
-                                        <p>Dinner: open from 6.30 pm, last order at 10.00 pm (daily)</p>
-                                    </div>
-                                </li>
-                            </ul>
-                            <h6>Dress Code</h6>
-                            <p>Smart casual (no shorts, hats, or sandals permitted)</p>
-                            <h6>Terrace</h6>
-                            <p>Open for drinks only</p>
-                        </div>
-                    </div>
+                    <div class="section-title">OOLONG </div>
+                    <p> Oolong, our specialty tea and coffee cafe invites you to indulge in a rich selection of aromatic brews and exquisite blends. Relax in a cozy ambiance while savoring our carefully crafted beverages, perfect for any tea or coffee enthusiast.</p>
+                   
                 </div>
             </div>
         </div>
