--- a/Royal-Suit.html
+++ b/Royal-Suit.html
@@ -81,8 +81,8 @@
     </div>
 
     <!-- Rooom Details -->
-    <div class="room-details2 section-padding valign bg-img bg-fixed" data-overlay-dark="7"
-        data-background="img/slider/6.jpg">
+    <div class="room-details2 section-padding valign bg-img bg-fixed" data-overlay-dark="9"
+        data-background="img/Royal-Suite-.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -103,57 +103,57 @@
                                 <div class="col col-md-6">
                                     <ul class="list-unstyled list mb-4">
                                         <li>
-                                            <div class="icon"> <span class="flaticon-group"></span> </div>
+                                            <div class="icon"> <img class="icon1" src="img/work-station.png" alt=""> </div>
                                             <div class="text">
                                                 <p>Work station</p>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="icon"> <span class="flaticon-wifi"></span> </div>
+                                            <div class="icon"> <img class="icon1" src="img/LCD.png" alt=""> </div>
                                             <div class="text">
                                                 <p>Multi-channel LCD TV</p>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="icon"> <span class="flaticon-bed"></span> </div>
+                                            <div class="icon"> <span class="flaticon-phone"></span> </div>
                                             <div class="text">
                                                 <p>Direct dial telephone</p>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-bed"></span> </div>
+                                        <!-- <li>
+                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
                                             <div class="text">
                                                 <p>Swimming Pool</p>
                                             </div>
-                                        </li>
+                                        </li> -->
                                         <li>
-                                            <div class="icon"> <span class="flaticon-bed"></span> </div>
+                                            <div class="icon"> <img class="icon1" src="img/mini-bar.png" alt="">  </div>
                                             <div class="text">
                                                 <p>Mini-bar</p>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-bed"></span> </div>
+                                        <!-- <li>
+                                            <div class="icon"> <img class="icon1" src="img/travel-desk.png" alt=""> </div>
                                             <div class="text">
                                                 <p>Travel desk</p>
                                             </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-bed"></span> </div>
+                                        </li> -->
+                                        <!-- <li>
+                                            <div class="icon"><img class="icon1" src="img/doctor-on-call.png" alt=""> </div>
                                             <div class="text">
                                                 <p>Doctor on Call</p>
                                             </div>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                                 <div class="col col-md-6">
                                     <ul class="list-unstyled list mb-4">
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-breakfast"></span> </div>
+                                        <!-- <li>
+                                            <div class="icon"> <span class="flaticon-towel"></span> </div>
                                             <div class="text">
                                                 <p>Laundry Service</p>
                                             </div>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <div class="icon"> <span class="flaticon-clock-1"></span> </div>
                                             <div class="text">
@@ -162,35 +162,35 @@
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
+                                            <div class="icon"> <span class="flaticon-coffee-cup"></span> </div>
                                             <div class="text">
                                                 <p>Tea/coffer maker </p>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
+                                            <div class="icon"> <span class="flaticon-wifi"></span> </div>
                                             <div class="text">
                                                 <p>Wi-Fi connectivity</p>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
+                                            <div class="icon"> <img class="icon1" src="img/Imported-amenities.png" alt="">  </div>
                                             <div class="text">
-                                                <p>Imported amenities</p>
+                                                <p>Imported Toiletries</p>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
+                                            <div class="icon"> <img class="icon1" src="img/Electronic-safe.png" alt=""> </div>
                                             <div class="text">
                                                 <p>Electronic safe </p>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
+                                        <!-- <li>
+                                            <div class="icon"> <img class="icon1" src="img/business-centre.png" alt=""> </div>
                                             <div class="text">
                                                 <p>Business Center</p>
                                             </div>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
