--- a/about.html
+++ b/about.html
@@ -101,9 +101,12 @@
                     <div class="section-title">Sandy's Tower</div>
                     <div class="row">
                         <div class="col-md-6">
-                            <p>Welcome to the best five-star deluxe hotel in New York. The in hotel elementum sesue the aucan vestibulum aliquam ustona sapien rutrum volutpat onec in quis the veliten.</p>
-                            <p>Hotel in the miss drana varius natoque penatibus et magnis silver miss parturient monte nascete morbine.</p>
-                            <p>Hotel ut nislan quam nestibulum ac quam nec odio elementum sceisue the aucan ligula. Orci varius natoque penatibus et magnis dis parturient monte nascete morbine.</p>
+                            <p>Welcome to Sandy's Tower Hotel, a beacon of luxury and elegance in the heart of Bhubaneswar, Odisha. Established in 2012, our prestigious 4-star hotel has become a preferred destination for travelers seeking comfort and sophistication</p>
+                            <p>Located in Bhubaneswar, the City of Temples, Sandy's Tower Hotel offers a serene and luxurious stay with world-class amenities. We offer four room categories to select from, ensuring a perfect fit for every guest. Our hotel features a state-of-the-art fitness center, a refreshing swimming pool, multiple dining options, and a stylish bar, WiFi, 3 banquet halls and 2 outdoor lawns.
+                                At Sandy's Tower Hotel, we pride ourselves on exceptional service. </p>
+                            <p>At Sandy's Tower Hotel, we pride ourselves on exceptional service. 
+                                Whether you're here to explore Bhubaneswar's rich cultural heritage or simply to relax, Sandy's Tower Hotel provides the perfect base for your journey.
+                                Welcome to Sandy's Tower Hotel – where luxury meets tradition.</p>
                             <!-- Rating -->
                             <div class="ratting-point mt-30 mb-30">
                                 <div class="features-ratting">
@@ -123,10 +126,10 @@
                         </div>
                         <div class="col-md-6">
                             <div class="row g-3">
-                                <div class="col-6 text-end"> <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg" style="margin-top: 25%;"> </div>
-                                <div class="col-6 text-start"> <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg"> </div>
-                                <div class="col-6 text-end"> <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg"> </div>
-                                <div class="col-6 text-start"> <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg"> </div>
+                                <div class="col-6 text-end"> <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s" src="img/outside.png" style="margin-top: 25%;"> </div>
+                                <div class="col-6 text-start"> <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/lobby.png"> </div>
+                                <div class="col-6 text-end"> <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="img/property.png"> </div>
+                                <div class="col-6 text-start"> <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.7s" src="img/swimming-pool-.jpg"> </div>
                             </div>
                         </div>
                     </div>
