--- a/restaurant.html
+++ b/restaurant.html
@@ -80,8 +80,8 @@
     <header class="header slider">
         <div class="owl-carousel owl-theme">
             <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/Xenia.jpg"></div>
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/pool-deck-area.jpg"></div>
+            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/xenia.jpg"></div>
+            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/Pool-deck-area.jpg"></div>
         </div>
         <!-- button scroll -->
         <a href="#" data-scroll-nav="1" class="mouse smoothscroll"> <span class="mouse-icon">
