--- a/Xenia.html
+++ b/Xenia.html
@@ -80,7 +80,7 @@
     <header class="header slider">
         <div class="owl-carousel owl-theme">
             <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/Xenia.jpg"></div>
+            <div class="text-center item bg-img" data-overlay-dark="4" data-background="img/xenia.jpg"></div>
             
         </div>
         <!-- button scroll -->
