--- a/explore-bhubaneswar.html
+++ b/explore-bhubaneswar.html
@@ -78,16 +78,16 @@
     </div>
     
     <!-- Rooom Details -->
-    <div class="room-details2 section-padding valign bg-img bg-fixed" data-overlay-dark="7" data-background="img/slider/6.jpg">
+    <div class="room-details2 section-padding valign bg-img bg-fixed" data-overlay-dark="7" data-background="img/discover-bhubaneshwar.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="wrap">
                         <figure>
                             <div class="owl-carousel owl-theme">
-                                <div class="img"> <img src="img/rooms/19.jpg" alt=""> </div>
-                                <div class="img"> <img src="img/rooms/20.jpg" alt=""> </div>
-                                <div class="img"> <img src="img/rooms/21.jpg" alt=""> </div>
+                                <div class="img"> <img src="img/exp.jpg" alt=""> </div>
+                                <div class="img"> <img src="img/explore.jpg" alt=""> </div>
+                                <div class="img"> <img src="img/explorebbs.jpg" alt=""> </div>
                             </div>
                         </figure>
                         <div class="caption">
@@ -299,7 +299,7 @@
         </div>
     </section>
     <!-- Booking Search -->
-    <section class="section-padding bg-img bg-fixed" data-overlay-dark="3" data-background="img/rooms/18.jpg">
+    <section class="section-padding bg-img bg-fixed" data-overlay-dark="3" data-background="img/discover-bhubaneshwar.jpg">
         <div class="container">
             <div class="booking-inner clearfix">
                 <form action="#" class="form1 clearfix">
