--- a/luxury.html
+++ b/luxury.html
@@ -130,18 +130,18 @@
                                                 <p>Mini-bar</p>
                                             </div>
                                         </li>
-                                        <!-- <li>
-                                            <div class="icon"> <img class="icon1" src="img/travel-desk.png" alt=""> </div>
+                                        <li>
+                                            <div class="icon"> <img class="icon1" src="img/iron-board.png" alt=""> </div>
                                             <div class="text">
-                                                <p>Travel desk</p>
+                                                <p>Iron Board</p>
                                             </div>
-                                        </li> -->
-                                        <!-- <li>
-                                            <div class="icon"><img class="icon1" src="img/doctor-on-call.png" alt=""> </div>
+                                        </li>
+                                        <li>
+                                            <div class="icon"><img class="icon1" src="img/Hair-dryer.png" alt=""> </div>
                                             <div class="text">
-                                                <p>Doctor on Call</p>
+                                                <p>Hair Dryer</p>
                                             </div>
-                                        </li> -->
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="col col-md-6">
