--- a/rooms4.html
+++ b/rooms4.html
@@ -101,10 +101,10 @@
                         </div>
                         <div class="con"> <span class="icon"><i class="flaticon-bed"></i></span>
                             <h3 class="title"><a href="luxury.html">Luxury</a></h3>
-                            <p class="text">30 m<sup>2</sup> / 2 adults 1 children</p>
+                            <p class="text">300 sq.ft / 2 adults 1 children</p>
                             <div class="book">
                                 <div><a href="luxury.html" class="butn-dark2"><span>Book</span></a></div>
-                                <div><span class="price">$ 150</span><span>per night</span></div>
+                                <!-- <div><span class="price">$ 150</span><span>per night</span></div> -->
                             </div>
                         </div>
                     </div>
@@ -116,10 +116,10 @@
                         </div>
                         <div class="con"> <span class="icon"><i class="flaticon-bed"></i></span>
                             <h3 class="title"><a href="Club-royal.html">Club Royal</a></h3>
-                            <p class="text">40 m<sup>2</sup> / 3 adults 1 children</p>
+                            <p class="text">417 sq.ft / 2 adults 1 children</p>
                             <div class="book">
                                 <div><a href="Club-royal.html" class="butn-dark2"><span>Book</span></a></div>
-                                <div><span class="price">$ 200</span><span>per night</span></div>
+                                <!-- <div><span class="price">$ 200</span><span>per night</span></div> -->
                             </div>
                         </div>
                     </div>
@@ -131,10 +131,10 @@
                         </div>
                         <div class="con"> <span class="icon"><i class="flaticon-bed"></i></span>
                             <h3 class="title"><a href="Club-Executive.html">Club-Executive</a></h3>
-                            <p class="text">50 m<sup>2</sup> / 4 adults 1 children</p>
+                            <p class="text">425 sq.ft/ 3 adults 2 children</p>
                             <div class="book">
                                 <div><a href="Club-Executive.html" class="butn-dark2"><span>Book</span></a></div>
-                                <div><span class="price">$ 250</span><span>per night</span></div>
+                                <!-- <div><span class="price">$ 250</span><span>per night</span></div> -->
                             </div>
                         </div>
                     </div>
@@ -146,10 +146,10 @@
                         </div>
                         <div class="con"> <span class="icon"><i class="flaticon-bed"></i></span>
                             <h3 class="title"><a href="Royal-Suit.html">Royal Suit</a></h3>
-                            <p class="text">45 m<sup>2</sup> / 2 adults 1 children</p>
+                            <p class="text">750 sq.ft / 2 adults 1 children</p>
                             <div class="book">
                                 <div><a href="Royal-Suit.html" class="butn-dark2"><span>Book</span></a></div>
-                                <div><span class="price">$ 300</span><span>per night</span></div>
+                                <!-- <div><span class="price">$ 300</span><span>per night</span></div> -->
                             </div>
                         </div>
                     </div>
