--- a/Royal-Suit.html
+++ b/Royal-Suit.html
@@ -99,101 +99,101 @@
 
                             <p>Spacious, bright guestrooms with tasteful furnishing, wooden floor and panoramic windows
                                 from the ceiling to the floor.</p>
-                            <div class="row">
-                                <div class="col col-md-6">
-                                    <ul class="list-unstyled list mb-4">
-                                        <li>
-                                            <div class="icon"> <img class="icon1" src="img/work-station.png" alt=""> </div>
-                                            <div class="text">
-                                                <p>Work station</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <img class="icon1" src="img/LCD.png" alt=""> </div>
-                                            <div class="text">
-                                                <p>Multi-channel LCD TV</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-phone"></span> </div>
-                                            <div class="text">
-                                                <p>Direct dial telephone</p>
-                                            </div>
-                                        </li>
-                                        <!-- <li>
-                                            <div class="icon"> <span class="flaticon-swimming"></span> </div>
-                                            <div class="text">
-                                                <p>Swimming Pool</p>
-                                            </div>
-                                        </li> -->
-                                        <li>
-                                            <div class="icon"> <img class="icon1" src="img/mini-bar.png" alt="">  </div>
-                                            <div class="text">
-                                                <p>Mini-bar</p>
-                                            </div>
-                                        </li>
-                                        <!-- <li>
-                                            <div class="icon"> <img class="icon1" src="img/travel-desk.png" alt=""> </div>
-                                            <div class="text">
-                                                <p>Travel desk</p>
-                                            </div>
-                                        </li> -->
-                                        <!-- <li>
-                                            <div class="icon"><img class="icon1" src="img/doctor-on-call.png" alt=""> </div>
-                                            <div class="text">
-                                                <p>Doctor on Call</p>
-                                            </div>
-                                        </li> -->
-                                    </ul>
+                                <div class="row">
+                                    <div class="col col-md-6">
+                                        <ul class="list-unstyled list mb-4">
+                                            <li>
+                                                <div class="icon"> <img class="icon1" src="img/work-station.png" alt=""> </div>
+                                                <div class="text">
+                                                    <p>Work station</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <img class="icon1" src="img/LCD.png" alt=""> </div>
+                                                <div class="text">
+                                                    <p>Multi-channel LCD TV</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <span class="flaticon-phone"></span> </div>
+                                                <div class="text">
+                                                    <p>Direct dial telephone</p>
+                                                </div>
+                                            </li>
+                                            <!-- <li>
+                                                <div class="icon"> <span class="flaticon-swimming"></span> </div>
+                                                <div class="text">
+                                                    <p>Swimming Pool</p>
+                                                </div>
+                                            </li> -->
+                                            <li>
+                                                <div class="icon"> <img class="icon1" src="img/mini-bar.png" alt="">  </div>
+                                                <div class="text">
+                                                    <p>Mini-bar</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <img class="icon1" src="img/iron-board.png" alt=""> </div>
+                                                <div class="text">
+                                                    <p>Iron Board</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"><img class="icon1" src="img/Hair-dryer.png" alt=""> </div>
+                                                <div class="text">
+                                                    <p>Hair Dryer</p>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col col-md-6">
+                                        <ul class="list-unstyled list mb-4">
+                                            <!-- <li>
+                                                <div class="icon"> <span class="flaticon-towel"></span> </div>
+                                                <div class="text">
+                                                    <p>Laundry Service</p>
+                                                </div>
+                                            </li> -->
+                                            <li>
+                                                <div class="icon"> <span class="flaticon-clock-1"></span> </div>
+                                                <div class="text">
+                                                    <p>24 hours hot/cold water
+                                                    </p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <span class="flaticon-coffee-cup"></span> </div>
+                                                <div class="text">
+                                                    <p>Tea/coffer maker </p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <span class="flaticon-wifi"></span> </div>
+                                                <div class="text">
+                                                    <p>Wi-Fi connectivity</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <img class="icon1" src="img/Imported-amenities.png" alt="">  </div>
+                                                <div class="text">
+                                                    <p>Imported Toiletries</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <img class="icon1" src="img/Electronic-safe.png" alt=""> </div>
+                                                <div class="text">
+                                                    <p>Electronic safe </p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="icon"> <img class="icon1" src="img/fruit-basket.png" alt=""> </div>
+                                                <div class="text">
+                                                    <p>Fruit Basket</p>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="col col-md-6">
-                                    <ul class="list-unstyled list mb-4">
-                                        <!-- <li>
-                                            <div class="icon"> <span class="flaticon-towel"></span> </div>
-                                            <div class="text">
-                                                <p>Laundry Service</p>
-                                            </div>
-                                        </li> -->
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-clock-1"></span> </div>
-                                            <div class="text">
-                                                <p>24 hours hot/cold water
-                                                </p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-coffee-cup"></span> </div>
-                                            <div class="text">
-                                                <p>Tea/coffer maker </p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <span class="flaticon-wifi"></span> </div>
-                                            <div class="text">
-                                                <p>Wi-Fi connectivity</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <img class="icon1" src="img/Imported-amenities.png" alt="">  </div>
-                                            <div class="text">
-                                                <p>Imported Toiletries</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon"> <img class="icon1" src="img/Electronic-safe.png" alt=""> </div>
-                                            <div class="text">
-                                                <p>Electronic safe </p>
-                                            </div>
-                                        </li>
-                                        <!-- <li>
-                                            <div class="icon"> <img class="icon1" src="img/business-centre.png" alt=""> </div>
-                                            <div class="text">
-                                                <p>Business Center</p>
-                                            </div>
-                                        </li> -->
-                                    </ul>
-                                </div>
-                            </div>
                             <div class="book">
                                 <div><a href="Club-Executive.html" class="butn-dark2"><span>Book</span></a></div>
 
